# BetterFFTW

./: .gitignore  .gitignore.txt  README.md  paper.md  pyproject.toml  setup.py
.github/workflows/: draft-pdf.yml  tests.yml
benchmark_results/: basic_performance_(small).csv  benchmark_report_20250321_134413.md  benchmark_report_20250321_135509.md  benchmark_report_20250321_135903.md  benchmark_report_latest.md  benchmark_results_20250321_134413.json  benchmark_results_20250321_135509.json  benchmark_results_20250321_135903.json  benchmark_results_20250321_140139.json  benchmark_results_20250321_140458.json  benchmark_results_latest.json  benchmark_results_partial.json  direct_comparison_20250326_131619.csv  direct_comparison_20250410_134847.csv  memory_efficiency_20250410_134847.csv  non_power_of_two_20250410_134847.csv  repeated_use_20250410_134847.csv  system_info.txt  thread_scaling_20250410_134847.csv
benchmark_results/.ipynb_checkpoints/: direct_comparison_summary_20250410_134847-checkpoint.csv  enhanced_summary_report_20250411_013122-checkpoint.md
benchmarks/: another_benchmark.py  benchmark_betterfftw.py  comprehensive_benchmark.py  simple_benchmark.py
benchmarks/.ipynb_checkpoints/: benchmark_betterfftw-checkpoint.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
examples/: drop_in_replacement.py  simple_test.py
paper/: paper.bib  paper.md
src/betterfftw/: __init__.py  core.py  interface.py  planning.py  small_test.ipynb
src/betterfftw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test-betterfftw.py  test_betterfftw.py  test_regressions.py
