[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betterfftw"
version = "0.1.1"
description = "High-performance, user-friendly wrapper for FFTW in Python"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
authors = [
    {name = "Sebastian Griego", email = "sebastianngriego@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.17.0",
    "scipy>=1.3.0",
    "pyfftw>=0.12.0",
    "psutil>=5.6.0",  # for the planning module
]

[project.urls]
"Homepage" = "https://github.com/sebastian-griego/betterfftw"

[project.optional-dependencies]
dev = [
    "matplotlib",  # for examples
    "pytest>=6.0",
    "black",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["betterfftw"]